<resources>
    <string name="app_name">BloodPALS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">BloodPALS</string>
    <string name="nav_header_subtitle">Team Alpha</string>
    <string name="nav_header_desc">Navigation Header</string>

    <string name="action_settings">Settings</string>

    <string name="loading_text">Loading...</string>

    <!-- NAVIGATION MENU -->

    <string name="menu_home">Home</string>
    <string name="menu_blood_banks">Blood Banks</string>
    <string name="menu_check_blood_donation_eligibility">Check Blood Donation Eligibility</string>
    <string name="menu_book_appointment_with_singpass">Book Appointment with SingPass</string>
    <string name="menu_rewards">Rewards</string>

    <string name="menu_my_blood_donation_activities">My Donation Activities</string>

    <string name="menu_login">Login</string>
    <string name="menu_register">Register</string>

    <string name="menu_my_profile">My Profile</string>
    <string name="menu_logout">Logout</string>

    <string name="menu_give_user_points">Give Points to Donor</string>
    <string name="menu_deduct_user_points">Deduct Points from Donor</string>

    <!-- MENU ACTION -->

    <string name="menu_action_search">Search</string>
    <string name="menu_action_add">Add</string>
    <string name="menu_action_create">Create</string>
    <string name="menu_action_create_new">Create New</string>

    <string name="menu_action_sort_latest_first">Sort Latest First</string>
    <string name="menu_action_sort_oldest_first">Sort Oldest First</string>

    <string name="menu_action_delete">Delete</string>

    <string name="menu_action_edit">Edit</string>

    <!-- PAGES -->

    <string name="page_my_qr_code">My QR Code</string>
    <string name="page_edit_my_profile">Edit My Profile</string>

    <string name="page_user_profile">User Profile</string>

    <string name="page_create_donation_activity">Create Donation Activity</string>
    <string name="page_edit_donation_activity">Edit Donation Activity</string>

    <!-- HOME TEXT -->

    <string name="home_message">\"Doing a blood donation isn\'t hard. Every single drops will makes a difference. Thank you to anyone who made an effort to creates a difference.\"</string>
    <string name="home_general_information">General Information</string>
    <string name="home_more_information">More Information on Blood Donation</string>
    <string name="home_blood_donation_process">Blood Donation Process</string>
    <string name="home_blood_facts_and_figures">Blood Facts &amp; Figures</string>
    <string name="home_how_to_maintain_healthy_iron_levels">How to Maintain Healthy Iron Levels?</string>
    <string name="home_blood_transfusion">Blood Transfusion</string>
    <string name="home_type_of_blood_donation">Type of Blood Donation</string>

    <!-- FORM INPUTS -->

    <string name="label_name">Name</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="label_new_password">New Password</string>
    <string name="label_dob">Date of Birth</string>

    <string name="label_blood_type">Blood Type</string>
    <string-array name="input_blood_types_array">
        <item>Select</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>

    <string name="label_points">Points</string>

    <string name="label_points_to_give">Points to Give</string>
    <string-array name="input_give_points_array">
        <item>10</item>
        <item>20</item>
        <item>30</item>
    </string-array>
    <string name="label_points_to_deduct">Points to Deduct</string>

    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="label_date_time">Date &amp; Time</string>

    <string name="label_location">Location</string>
    <string name="label_donated_amount">Donated Amount</string>

    <string name="label_next_earliest_donation_date">Next Earliest Donation Date</string>

    <!-- BUTTONS -->

    <string name="button_login_text">Login</string>
    <string name="button_register_text">Register</string>

    <string name="button_refresh">Refresh</string>
    <string name="button_retry">Retry</string>
    <string name="button_reload">Reload</string>

    <string name="button_view_my_qr_code">View My QR Code</string>

    <string name="button_give_points">Give Points</string>
    <string name="button_deduct_points">Deduct Points</string>

    <string name="button_create">Create</string>
    <string name="button_update">Update</string>

    <string name="button_date_picker">Date Picker</string>
    <string name="button_time_picker">Time Picker</string>

    <!-- VIEW -->

    <string name="background_description">Background</string>

    <string name="image_qr_code">QR Code</string>

    <!-- MESSAGE TEXT -->

    <string name="message_camera_permission_required">Camera permission required!</string>
    <string name="message_error_login_fail">Invalid email or password</string>
    <string name="message_error_register_fail">Register failed! Please try again later.</string>
    <string name="message_error_unable_to_get_user">Oops! Unable to retrieve your account information. Please try again.</string>
    <string name="message_error_get_user_exception">Oops! An error occurred when trying getting user. Please try again.</string>
    <string name="message_error_get_donation_activity_exception">Oops! An error occurred when trying getting donation activity. Please try again.</string>
    <string name="message_error_get_reward_exception">Oops! An error occurred when trying getting reward. Please try again.</string>
    <!-- SYMBOL -->

    <string name="symbol_colon">:</string>

    <!-- PASSWORD REQUIREMENT -->

    <string name="password_requirement_1">- Minimum length of 8</string>
    <string name="password_requirement_2">- At least 1 alphabet</string>
    <string name="password_requirement_3">- At least 1 digit</string>

</resources>
