<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/list_margin"
            android:layout_marginTop="@dimen/list_margin"
            android:layout_marginEnd="@dimen/list_margin"
            android:layout_marginBottom="@dimen/list_margin_2x"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/list_margin"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/app_logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_margin_3x"
                android:text="@string/home_message"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_margin"
                android:text="@string/home_more_information"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button_blood_donation_process"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_margin"
                android:text="@string/home_blood_donation_process" />

            <Button
                android:id="@+id/button_blood_facts_and_figures"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_margin"
                android:text="@string/home_blood_facts_and_figures" />

            <Button
                android:id="@+id/button_how_to_maintain_healthy_iron_levels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_margin"
                android:text="@string/home_how_to_maintain_healthy_iron_levels" />

            <Button
                android:id="@+id/button_blood_transfusion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_margin"
                android:text="@string/home_blood_transfusion" />

            <Button
                android:id="@+id/button_type_of_blood_donation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_margin_2x"
                android:text="@string/home_type_of_blood_donation" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>