<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.userprofile.UserProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/list_margin"
            android:layout_marginTop="@dimen/list_margin"
            android:layout_marginEnd="@dimen/list_margin"
            android:layout_marginBottom="@dimen/list_margin"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <!-- Name -->

            <TextView
                android:id="@+id/label_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_name" />

            <TextView
                android:id="@+id/display_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_margin"
                android:text="@string/loading_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <!-- Email -->

            <TextView
                android:id="@+id/label_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_email" />

            <TextView
                android:id="@+id/display_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_margin"
                android:text="@string/loading_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <!-- Points -->

            <TextView
                android:id="@+id/label_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_points" />

            <TextView
                android:id="@+id/display_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_margin"
                android:text="@string/loading_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <!-- Progress Spinner -->

            <ProgressBar
                android:id="@+id/progress_spinner"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_margin"
                android:visibility="gone" />

            <!-- Give Points -->

            <View
                android:id="@+id/divider_give_points"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/list_margin_2x"
                android:background="?android:attr/listDivider"
                android:visibility="gone" />

            <TextView
                android:id="@+id/label_give_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/input_give_points"
                android:text="@string/label_points_to_give"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/input_give_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_margin"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_give_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_margin"
                android:text="@string/button_give_points"
                android:visibility="gone" />

            <!-- Deduct Points -->

            <View
                android:id="@+id/divider_deduct_points"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/list_margin_2x"
                android:background="?android:attr/listDivider"
                android:visibility="gone" />

            <TextView
                android:id="@+id/label_deduct_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/input_deduct_points"
                android:text="@string/label_points_to_deduct"
                android:visibility="gone" />

            <EditText
                android:id="@+id/input_deduct_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_margin"
                android:autofillHints=""
                android:ems="10"
                android:inputType="number"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_deduct_points"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/list_margin"
                android:text="@string/button_deduct_points"
                android:visibility="gone" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>